--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
-image-Container{
-	"https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"
+.image-Container{
+	width: 100px;
+	height: 100px;
+	img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"
+    position: fixed;
 }
+
+
