--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,23 @@
-.image-Container{
-	width: 100px;
-	height: 100px;
-	img src="https://storage.googleapis.com/acciojob-open-file-collections/5c751d10-50b1-4ef7-887a-ee69223c7c53_Screenshot%202023-08-16%20at%2012.56.13%20AM.png"
-    position: fixed;
+body{
+	background-color:#CBD6CB;
 }
-
-
+.center{
+	margin:auto;
+	width:1100px;
+}
+.middle{
+	text-align:center;
+}
+.center-small{
+	margin: 0 auto;
+	}
+.heading{
+	font-family: Verdana,Geneva,Tahoma, sans-serif;
+}
+.m1-10{
+	margin-left: 10px;
+}
+.plr-10{
+	padding-left: 10px;
+	padding-right: 10px;
+}
